lab-2/examples/ex18.nojs
// error

int main() {
	int a  0

	string b = 4
	a = b

	return 0
}
